--- a/package.json
+++ b/package.json
@@ -3,9 +3,32 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1"
+    "@babel/plugin-transform-react-jsx": "^7.25.9",
+    "@babel/preset-react": "^7.26.3",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
+    "@mui/x-data-grid": "^6.5.0",
+    "@types/node": "^18.16.0",
+    "@types/react": "^18.3.16",
+    "@types/react-dom": "^18.3.5",
+    "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
+    "date-fns": "^2.30.0",
+    "firebase": "^9.22.0",
+    "formik": "^2.2.9",
+    "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.3.1",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^7.0.2",
+    "react-scripts": "5.0.1",
+    "socket.io-client": "^4.6.1",
+    "styled-components": "^6.0.0-rc.1",
+    "typescript": "^4.9.5",
+    "yup": "^1.1.1",
+    "zustand": "^4.3.8"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -27,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3"
   }
 }
